<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:padding="5dp"
 >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.plainolnotes.com.example.medicalalert.EditorActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:gravity="top"
        android:lines="5"
        android:maxLines="5"
        android:background="@drawable/round_edittext"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_Description_here"
        android:inputType="textMultiLine|textCapSentences"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/tech" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/firstlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startdate"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startdate"
            android:onClick="showDatePickerDialog"
            android:gravity="top"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/enddate"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstlayout"
        android:id="@+id/secondLayout"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enddate"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enddate"
            android:onClick="showDatePickerDialog2"
            android:gravity="top"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/enddate"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondLayout"
        android:id="@+id/thirdlayout"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picktime"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timer"
            android:onClick="showTimePickerDialog"
            android:gravity="top"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:padding="3dp"
            android:background="@drawable/timer_round"
            android:text="@string/timertext"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</RelativeLayout>

</LinearLayout>
</ScrollView>
